# hearthstone-leaderboards-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
hearthstone_leaderboards_scraper/: cli.py  game_mode.py  region.py  scraper.py
