[project]
name = "hearthstone-leaderboards-scraper"
description = ""
version = "0.1.0"
authors = [{ name = "zigai", email = "ziga.ivansek@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = []

dependencies = [
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "interfacy-cli>=0.2.2",
    "stdl>=0.6.0",
]

[project.urls]
"Homepage" = "https://github.com/zigai/hearthstone-leaderboards-scraper"
"Bug Tracker" = "https://github.com/zigai/hearthstone-leaderboards-scraper/issues"

[project.scripts]
hs-leaderboards-scraper = "hearthstone_leaderboards_scraper.cli:cli"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
extend-ignore = ["E731", "E741", "N802", "N803", "N806", "E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
